# tooldex

./: AGENTS.md  README.md  pyproject.toml
.tooldex/: codex.toml
configs/: codex.toml
docs/: architecture.md  tooldex_usage.md
docs/integrations/: codex.md
docs/mcp/: adding-tooldex-mcp-server.md  tooldex-shell-agent-guide.md
scripts/: trigger_primary_shell.py
src/tooldex/: __init__.py  __main__.py  tool_wrapper.py  utility_launcher.py
src/tooldex/cli/: __init__.py  codex.py
src/tooldex/configs/: codex.toml
src/tooldex/core/: __init__.py  config.py
src/tooldex/mcp/: __init__.py  __main__.py  registry.py  server.py
tests/: test_import.py  test_tool_wrapper.py  test_utility_launcher.py
tests/cli/: test_codex.py  test_main.py
tests/core/: test_config.py
tests/mcp/: test_server.py
