[project]
name = "tooldex"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=0.1.0",
]

[project.scripts]
tooldex = "tooldex.__main__:main"
tooldex-codex = "tooldex.tool_wrapper:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.6.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
